java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint10-hints.pass
Cast ......toArray(...)[] to String
Change type of s to Object
